[tool.poetry]
name = "zoloto"
version = "0.3.0"
description = "A fiducial marker system powered by OpenCV - Supports ArUco and April"
authors = ["Jake Howard <git@theorangeone.net>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/RealOrangeOne/zoloto"
homepage = "https://github.com/RealOrangeOne/zoloto"
keywords = ["opencv", "cv", "fiducial marker", "aruco", "april"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development",
]


[tool.poetry.dependencies]
python = "^3.5"
opencv-contrib-python-headless = "^3.4"
cached-property = "^1.5"
coordinates = "^0.3.0"
fastcache = "^1.1"
ujson = "^1.35"
picamera = {version = "^1.13", extras=["array"], optional = true}

[tool.poetry.dev-dependencies]
bandit = "^1.6"
chrono = "^1.0"
flake8 = "^3.7"
flake8-bugbear = "^19.3"
flake8-builtins = "^1.4"
flake8-comprehensions = "^2.1"
flake8-mutable = "^1.2"
flake8-print = "^3.1"
flake8-tuple = "^0.4.0"
hypothesis = "^4.28"
mypy = "^0.720.0"
pytest = "^5.0"
pytest-benchmark = "^3.2"
pytest-cov = "^2.7"
ujson = "^1.35"
isort = {version = "^4.3",extras = ["pyproject"]}
black = {version = "^19.3b0", python = "^3.6", allows-prereleases = true}
snapshottest = "^0.5.1"

[tool.poetry.extras]
rpi = ["picamera"]

[tool.poetry.scripts]
zoloto-calibrate = 'zoloto.cli.calibrate:main'
zoloto-preview = 'zoloto.cli.preview:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
