[metadata]
# The rest still lives in `setup.py`
name = zoloto
version = attr: zoloto.__version__
url = https://github.com/RealOrangeOne/zoloto
author = Jake Howard
long_description = file: README.md
description = A fiducial marker system powered by OpenCV - Supports ArUco and April
long_description_content_type = text/markdown
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Software Development
    Typing :: Typed

[mypy]
mypy_path = stubs
no_implicit_optional = True
warn_unused_ignores = True
strict_optional = True
check_untyped_defs = True
ignore_missing_imports = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
not_skip=__init__.py

[flake8]
extend_ignore=E128,E501
