[metadata]
name = zoloto
version = 0.9.0
url = https://github.com/RealOrangeOne/zoloto
author = Jake Howard
long_description = file: README.md
description = A fiducial marker system powered by OpenCV - Supports ArUco and April
long_description_content_type = text/markdown
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Software Development
    Typing :: Typed
project_urls =
    Changelog = https://github.com/RealOrangeOne/zoloto/releases
    Documentation = https://zoloto.readthedocs.io/
    Source = https://github.com/RealOrangeOne/zoloto
    Issues = https://github.com/RealOrangeOne/zoloto/issues

[options]
python_requires = >=3.8
packages = find:
install_requires =
    cached-property >= 1.5
    pyquaternion >= 0.9.2
    numpy >= 1.22

[options.entry_points]
console_scripts =
    zoloto = zoloto.cli:main

[options.package_data]
zoloto = py.typed

[options.extras_require]
rpi = picamera[array] >= 1.13
opencv = opencv-contrib-python >=4.0,<4.6
cli =
    Pillow
    tqdm

[mypy]
mypy_path = stubs
no_implicit_optional = True
warn_unused_ignores = True
strict_optional = True
check_untyped_defs = True
ignore_missing_imports = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

show_error_codes = True
enable_error_code = ignore-without-code

plugins = numpy.typing.mypy_plugin

[isort]
float_to_top=true
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
extend_ignore=E128,E501
